--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Cinka",
   "license": "ISC",
   "dependencies": {
+    "@dank074/fluent-ffmpeg-multistream-ts": "^1.0.3",
     "express": "^4.21.1",
+    "express-ws": "^5.0.2",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "node-fetch": "^3.3.2"
